Refactor configuration and update dependencies for Spring Boot 3.4.3